--- a/src/main/features/response/views/check-and-send.njk
+++ b/src/main/features/response/views/check-and-send.njk
@@ -89,7 +89,7 @@
           row(
             label = 'How much money have you paid?',
             value = draft.partialAdmission.howMuchHaveYouPaid.amount | numeral,
-            changeLink = PartAdmissionPaths.howMuchHaveYouPaid.evaluateUri({ externalId: claim.externalId }),
+            changeLink = PartAdmissionPaths.howMuchHaveYouPaidPage.evaluateUri({ externalId: claim.externalId }),
             bold = true
           )
         }}
@@ -97,7 +97,7 @@
            row(
              label = 'When did you pay this amount?',
              value = draft.partialAdmission.howMuchHaveYouPaid.date.toMoment() | date,
-             changeLink = PartAdmissionPaths.howMuchHaveYouPaid.evaluateUri({ externalId: claim.externalId }),
+             changeLink = PartAdmissionPaths.howMuchHaveYouPaidPage.evaluateUri({ externalId: claim.externalId }),
              bold = true
            )
         }}
@@ -106,7 +106,7 @@
            row(
              label = 'How did you pay the amount claimed?',
              value = draft.partialAdmission.howMuchHaveYouPaid.text,
-             changeLink = PartAdmissionPaths.howMuchHaveYouPaid.evaluateUri({ externalId: claim.externalId }),
+             changeLink = PartAdmissionPaths.howMuchHaveYouPaidPage.evaluateUri({ externalId: claim.externalId }),
              bold = true
            )
         }}
