--- a/src/main/features/response/views/macro/statement-of-means/incomeExpenseSource.njk
+++ b/src/main/features/response/views/macro/statement-of-means/incomeExpenseSource.njk
@@ -1,8 +1,13 @@
-{% from "form.njk" import poundInputInline, radioGroup %}
+{% from "form.njk" import textInput, poundInputInline, radioGroup %}
 
-{% macro incomeExpenseSource(form, name, amountLabel, amountHint, scheduleLabel) %}
-  {{ amountSource(form, name, label = amountLabel, hint = amountHint) }}
-  {{ scheduleSource(form, name, label = scheduleLabel) }}
+{% macro incomeExpenseSource(form, name, amountLabel, amountHint, scheduleLabel, nameEditable) %}
+  <div class="income-expense-source">
+    {% if nameEditable %}
+      {{ textInput(form = form, name = name + '[name]', label = 'Source of income') }}
+    {% endif %}
+    {{ amountSource(form, name, label = amountLabel, hint = amountHint) }}
+    {{ scheduleSource(form, name, label = scheduleLabel) }}
+  </div>
 {% endmacro %}
 
 {% macro amountSource(form, name, label, hint) %}
