--- a/src/main/features/response/views/statement-of-means/monthly-income.njk
+++ b/src/main/features/response/views/statement-of-means/monthly-income.njk
@@ -3,7 +3,7 @@
 {% from "../macro/statement-of-means/incomeExpenseSource.njk" import incomeExpenseSource %}
 
 {% block additional_scripts %}
-  {% include "expandible-checkbox-option-scripts.njk" %}
+  {% include "expandable-checkbox-option-scripts.njk" %}
   {% include "income-expense-calculation-scripts.njk" %}
 {% endblock %}
 
@@ -30,9 +30,10 @@
         {{ incomeSource(form, name = 'childBenefitSource', label = 'Child Benefit') }}
         {{ incomeSource(form, name = 'councilTaxSupportSource', label = 'Council Tax Support') }}
         {{ incomeSource(form, name = 'pensionSource', label = 'Pension (paid to you)') }}
+        {{ incomeSources(form, name = 'otherSources', label = 'Other') }}
       </div>
 
-      {{ linkButton('Recalculate total monthly income', 'action[calculateMontlyIncome]', 'button button-secondary calculate-montly-income-expense') }}
+      {{ linkButton('Recalculate total monthly income', 'action[calculateMonthlyIncome]', 'button button-secondary calculate-montly-income-expense') }}
 
       <p class="heading-small">
         Total monthly income: £<span class="total-monthly-income-expense"> {{ totalMonthlyIncomeExpense | default('0.00') }} </span>
@@ -49,18 +50,40 @@
 {% macro incomeSource(form, name, label, hint) %}
   {% set checkboxName = name + 'Declared' %}
 
-  {% call expandibleCheckboxOption(form = form, name = checkboxName, value = 'true', checked = form.valueFor(name), label = label) %}
+  {% call expandableCheckboxOption(form = form, name = checkboxName, value = 'true', checked = (form.valueFor(checkboxName) or (form.valueFor(name) and form.valueFor(name).populated)), label = label) %}
     {{ incomeExpenseSource(form = form, name = name, amountLabel = 'Amount received', amountHint = hint, scheduleLabel = 'Received every') }}
-    {{ linkButton(name = 'action[reset][' + name + ']', label = 'Reset this income source', class = 'link-button js-hidden') }}
+    {{ linkButton(name = 'action[resetIncomeSource][' + name + ']', label = 'Reset this income source', class = 'link-button js-hidden') }}
   {% endcall %}
 {% endmacro %}
 
-{% macro expandibleCheckboxOption(label, name, form, value, hint = '', checked = false, bold = false) %}
-  {% set expandiblePanelId = name + '-' + value | replace(' ', '') %}
-  <div class="expandible-checkbox-option">
-    <h3 class="heading-medium expandible">{{ t(label) }}</h3>
-    {{ option(form = form, name = name, value = value, type = 'checkbox', checked = checked, label = label, hint = hint, bold = bold, hidden = true, className = 'expandible visually-hidden', dataTarget = expandiblePanelId) }}
-    <div class="panel panel-border-narrow expandible" id="{{ expandiblePanelId }}">
+{% macro incomeSources(form, name, label, hint) %}
+  {% set checkboxName = name + 'Declared' %}
+
+  {% call expandableCheckboxOption(form = form, name = checkboxName, value = 'true', checked = (form.valueFor(checkboxName) or (form.valueFor(name) and form.model.anyOtherIncomePopulated)), label = label) %}
+    {% for source in form.model.otherSources %}
+      {% if loop.index0 !== 0 %}
+        <hr />
+      {% endif %}
+      <div class="other-income-expense-source">
+        {{ incomeExpenseSource(form = form, name = name + '[' + loop.index0 + ']', amountLabel = 'Amount received', amountHint = hint, scheduleLabel = 'Received every', nameEditable = true) }}
+        {% if form.model.otherSources.length > 1 %}
+          {{ linkButton(name = 'action[removeOtherIncomeSource][otherSources-' + loop.index0 + ']', label = 'Remove this income source', class = 'link-button') }}
+        {% endif %}
+      </div>
+    {% endfor %}
+
+    <div>
+      {{ linkButton(name = 'action[addOtherIncomeSource]', label = 'Add another source of income', class = 'button button-secondary') }}
+    </div>
+  {% endcall %}
+{% endmacro %}
+
+{% macro expandableCheckboxOption(form, name, value, checked = false, label, hint = '', bold = false) %}
+  {% set expandablePanelId = name + '-' + value | replace(' ', '') %}
+  <div class="expandable-checkbox-option">
+    <h3 class="heading-medium expandable">{{ t(label) }}</h3>
+    {{ option(form = form, name = name, value = value, type = 'checkbox', checked = checked, label = label, hint = hint, bold = bold, hidden = true, className = 'expandable visually-hidden', dataTarget = expandablePanelId) }}
+    <div class="panel panel-border-narrow expandable" id="{{ expandablePanelId }}">
       {{ caller() }}
     </div>
     <br />
