--- a/src/main/features/response/views/statement-of-means/monthly-income.njk
+++ b/src/main/features/response/views/statement-of-means/monthly-income.njk
@@ -67,7 +67,9 @@
       <div class="other-income-expense-source">
         {{ incomeExpenseSource(form = form, name = name + '[' + loop.index0 + ']', amountLabel = 'Amount received', amountHint = hint, scheduleLabel = 'Received every', nameEditable = true) }}
         {% if form.model.otherSources.length > 1 %}
-          {{ linkButton(name = 'action[removeOtherIncomeSource][otherSources-' + loop.index0 + ']', label = 'Remove this income source', class = 'link-button') }}
+          {{ linkButton(name = 'action[removeOtherIncomeSource][otherSources.' + loop.index0 + ']', label = 'Remove this income source', class = 'link-button') }}
+        {% else %}
+          {{ linkButton(name = 'action[resetIncomeSource][' + name + '.0]', label = 'Reset this income source', class = 'link-button js-hidden') }}
         {% endif %}
       </div>
     {% endfor %}
