Roc 2703 save part admission response

--- a/src/main/features/response/views/check-and-send.njk
+++ b/src/main/features/response/views/check-and-send.njk
@@ -105,7 +105,7 @@
         {{
            row(
              label = 'How did you pay the amount claimed?',
-             value = draft.partialAdmission.howMuchHaveYouPaid.text,
+             value = draft.partialAdmission.howMuchHaveYouPaid.paymentMethod,
              changeLink = PartAdmissionPaths.howMuchHaveYouPaidPage.evaluateUri({ externalId: claim.externalId }),
              bold = true
            )
