--- a/src/main/public/stylesheets/application.scss
+++ b/src/main/public/stylesheets/application.scss
@@ -25,6 +25,7 @@ $path: '/img/lib/';
 @import 'components/mobile';
 @import 'components/expandable-content';
 @import 'components/offer-table';
+@import 'components/income-expense-source';
 
 .notice {
   margin-bottom: 1.5rem;
