--- a/src/main/features/response/views/partial-admission/how-much-have-you-paid.njk
+++ b/src/main/features/response/views/partial-admission/how-much-have-you-paid.njk
@@ -21,7 +21,7 @@
       <h4 class="heading-small">{{ t('When did you pay this amount?') }}</h4>
       {{ dateInput(name = 'date', form = form) }}
 
-      {{ textArea(label = 'Explain why you don’t owe the full amount.', name = 'paymentMethod', form = form, bold = true) }}
+      {{ textArea(label = 'Explain why you don’t owe the full amount.', name = 'text', form = form, bold = true) }}
 
       {{ saveAndContinueButton() }}
     </form>
