Update check and send page

--- a/src/main/features/response/views/statement-of-means/check-and-send.njk
+++ b/src/main/features/response/views/statement-of-means/check-and-send.njk
@@ -119,24 +119,44 @@
 {% endif %}
 
 {% set income = draft.statementOfMeans.monthlyIncome %}
-{% set otherIncome = income.getPopulatedRowsOnly() %}
 {{ row('Monthly income', '', StatementOfMeansPaths.monthlyIncomePage.evaluateUri({ externalId: claim.externalId }), false, bold = true) }}
-{{ row('Take home pay', income.salary | numeral, '', false, bold = true) }}
-{{ row('Universal Credit', income.universalCredit | numeral, '', false, bold = true) }}
-{{ row('Jobseeker’s Allowance (income based)', income.jobSeekerAllowanceIncome | numeral, '', false, bold = true) }}
-{{ row('Jobseeker’s Allowance (contribution based)', income.jobSeekerAllowanceContribution | numeral, '', false, bold = true) }}
-{{ row('Income Support', income.incomeSupport | numeral, '', false, bold = true) }}
-{{ row('Working Tax Credit', income.workingTaxCredit | numeral, '', false, bold = true) }}
-{{ row('Child Tax Credit', income.childTaxCredit | numeral, '', false, bold = true) }}
-{{ row('Child Benefit', income.childBenefit | numeral, '', false, bold = true) }}
-{{ row('Council Tax Support', income.councilTaxSupport | numeral, '', false, bold = true) }}
-{{ row('Pension (paid to you)', income.pension | numeral, '', false, bold = true) }}
-{{ row('Maintenance payments (paid to you)', income.maintenance | numeral, '', otherIncome.length === 0, bold = true) }}
+{% if income.salarySource.populated %}
+{{ row('Take home pay', income.salarySource | numeral, '', false, bold = true) }}
+{% endif %}
+{% if income.universalCreditSource.populated %}
+{{ row('Universal Credit', income.universalCreditSource | numeral, '', false, bold = true) }}
+{% endif %}
+{% if income.jobseekerAllowanceIncomeSource.populated %}
+{{ row('Jobseeker’s Allowance (income based)', income.jobseekerAllowanceIncomeSource | numeral, '', false, bold = true) }}
+{% endif %}
+{% if income.jobseekerAllowanceContributionSource.populated %}
+{{ row('Jobseeker’s Allowance (contribution based)', income.jobseekerAllowanceContributionSource | numeral, '', false, bold = true) }}
+{% endif %}
+{% if income.incomeSupportSource.populated %}
+{{ row('Income Support', income.incomeSupportSource | numeral, '', false, bold = true) }}
+{% endif %}
+{% if income.workingTaxCreditSource.populated %}
+{{ row('Working Tax Credit', income.workingTaxCreditSource | numeral, '', false, bold = true) }}
+{% endif %}
+{% if income.childTaxCreditSource.populated %}
+{{ row('Child Tax Credit', income.childTaxCreditSource | numeral, '', false, bold = true) }}
+{% endif %}
+{% if income.childBenefitSource.populated %}
+{{ row('Child Benefit', income.childBenefitSource | numeral, '', false, bold = true) }}
+{% endif %}
+{% if income.councilTaxSupportSource.populated %}
+{{ row('Council Tax Support', income.councilTaxSupportSource | numeral, '', false, bold = true) }}
+{% endif %}
+{% if income.pensionSource.populated %}
+{{ row('Pension (paid to you)', income.pensionSource | numeral, '', false, bold = true) }}
+{% endif %}
+{% set otherIncome = income.anyOtherIncomePopulated() %}
 
-{% set indexOfLastRow = otherIncome.length - 1 %}
-{% for incomeRow in otherIncome %}
-  {{ row(incomeRow.description, incomeRow.amount | numeral, '', loop.index0 === indexOfLastRow ) }}
+{% if income.anyOtherIncomePopulated() %}
+{% for source in income.otherSources %}
+  {{ row(source.name, name.amount | numeral, '', loop.index0 === indexOfLastRow ) }}
 {% endfor %}
+{% endif %}
 
 {% set expenses = draft.statementOfMeans.monthlyExpenses %}
 {% set otherExpenses = expenses.getPopulatedRowsOnly() %}
