--- a/src/main/features/response/views/statement-of-means/check-and-send.njk
+++ b/src/main/features/response/views/statement-of-means/check-and-send.njk
@@ -159,7 +159,7 @@
 
 {% set expenses = draft.statementOfMeans.monthlyExpenses %}
 {% set otherExpenses = expenses.getPopulatedRowsOnly() %}
-{{ row('Monthly expenses', '', StatementOfMeansPaths.monthlyExpensesPage.evaluateUri({ externalId: claim.externalId }), true, bold = true) }}
+{{ row('Monthly expenses', '', StatementOfMeansPaths.monthlyExpensesPage.evaluateUri({ externalId: claim.externalId }), bottomBorder = false, bold = true, topBorder = true) }}
 {{ row('Mortgage', expenses.mortgage | numeral, '', false, bold = true) }}
 {{ row('Rent', expenses.rent | numeral, '', false, bold = true) }}
 {{ row('Council Tax', expenses.councilTax | numeral, '', false, bold = true) }}
