ROC-3661: update label on CnS page

--- a/src/main/features/response/views/check-and-send.njk
+++ b/src/main/features/response/views/check-and-send.njk
@@ -123,7 +123,7 @@
 
         {{
            row(
-             label = 'Why do you disagree with the claim amount?',
+             label = 'Why do you disagree with the amount claimed?',
              value = draft.partialAdmission.whyDoYouDisagree.text,
              changeLink = PartAdmissionPaths.whyDoYouDisagreePage.evaluateUri({ externalId: claim.externalId }),
              bold = true
