--- a/src/main/views/govukTemplate.njk
+++ b/src/main/views/govukTemplate.njk
@@ -72,6 +72,7 @@
     {% include "includes/phase_banner_beta.njk" %}
 
     {% if form %}
+      {% from "form.njk" import errorSummary %}
       {{ errorSummary(form) }}
     {% endif %}
 
